[metadata]
name = dcs-mizmerge
version = file: src/mizmerge/version
author = Walter Haynie
description = Python tool for merging DCS mission files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walterroach
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3+
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    pydcs @ git+https://github.com/pydcs/dcs@fac1bd084f22150acfde3bff220f8e69487048d1#egg=pydcs

[options.packages.find]
where = src