[metadata]
name = dcs-mizmerge
version = file: src/mizmerge/version
author = Walter Haynie
description = Python tool for merging DCS mission files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walterroach
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src

packages = mizmerge
python_requires = >=3.10
setup_requires = 
    cython
install_requires = 
    pyproj
    pydcs>=0.13.0

dependency_links = git+https://github.com/pydcs/dcs@fac1bd084f22150acfde3bff220f8e69487048d1#egg=pydcs
include_package_data = True

[options.entry_points]
console_scripts =
        dcs-mizmerge = mizmerge.mizmerge:main